--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/imagen/logoBioRoute.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BioRoute Chile Biotechnology Platform</title>
     <meta name="description" content="Programa estratégico que impulsa la industria de la biotecnología en Chile a través de financiamiento, ecosistema y recursos especializados." />
     <meta property="og:title" content="BioRoute Chile - Biotecnología Nacional" />
     <meta property="og:description" content="Conectando investigación, innovación y mercado para transformar Chile en un referente biotecnológico global" />
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
+ 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+   
   </head>
   <body>
     <div id="root"></div>
